# RemoteWorkouts

./: .gitignore  CMakeLists.txt  QtRemoteWorkouts.pro  descriptiondialog.cpp  descriptiondialog.h  descriptiondialog.ui  edituserinfo.cpp  edituserinfo.h  edituserinfo.ui  forgotpassword.cpp  forgotpassword.h  forgotpassword.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newuserwindow.cpp  newuserwindow.h  newuserwindow.ui  resources.qrc  welcomescreen.cpp  welcomescreen.h  welcomescreen.ui
